--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (80+deb9u2) UNRELEASED; urgency=medium
+
+  * Update to 4.9.0-4
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 03 Sep 2017 20:12:28 +0100
+
 linux-latest (80+deb9u1) stretch; urgency=medium
 
   * Revert changes to debug symbol meta-packages (Closes: #866691)
