--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (80+deb9u2) UNRELEASED; urgency=medium
+linux-latest (80+deb9u2) stretch; urgency=medium
 
   * Update to 4.9.0-4
 
- -- Ben Hutchings <ben@decadent.org.uk>  Sun, 03 Sep 2017 20:12:28 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 19 Sep 2017 14:51:35 +0100
 
 linux-latest (80+deb9u1) stretch; urgency=medium
 
