--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (80+deb9u3) UNRELEASED; urgency=medium
+linux-latest (80+deb9u3) stretch-security; urgency=high
 
   * Update to 4.9.0-5
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 04 Jan 2018 12:55:11 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 04 Jan 2018 12:57:17 +0100
 
 linux-latest (80+deb9u2) stretch; urgency=medium
 
