--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (80+deb9u4) UNRELEASED; urgency=medium
+linux-latest (80+deb9u4) stretch-security; urgency=high
 
   * Update to 4.9.0-6
 
- -- Yves-Alexis Perez <corsac@debian.org>  Tue, 20 Feb 2018 10:27:46 +0100
+ -- Yves-Alexis Perez <corsac@debian.org>  Thu, 22 Feb 2018 08:32:44 +0100
 
 linux-latest (80+deb9u3) stretch-security; urgency=high
 
