--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (80+deb9u7) UNRELEASED; urgency=medium
+
+  * debian/control: Point Vcs URLs to Salsa
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 04 Oct 2018 17:34:24 +0100
+
 linux-latest (80+deb9u6) stretch-security; urgency=high
 
   * Update to 4.9.0-8
