--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (80+deb9u5) stretch; urgency=medium
+
+  * Update to 4.9.0-7
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 14 Jun 2018 15:07:03 +0100
+
 linux-latest (80+deb9u4) stretch-security; urgency=high
 
   * Update to 4.9.0-6
