--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (80+deb9u7) UNRELEASED; urgency=medium
+linux-latest (80+deb9u7) stretch; urgency=medium
 
   * Update to 4.9.0-9
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 29 Mar 2019 10:58:23 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 29 Mar 2019 14:41:18 +0100
 
 linux-latest (80+deb9u6) stretch-security; urgency=high
 
