--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (80+deb9u7) stretch; urgency=medium
+
+  * Update to 4.9.0-9
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 29 Mar 2019 14:41:18 +0100
+
 linux-latest (80+deb9u6) stretch-security; urgency=high
 
   * Update to 4.9.0-8
