--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u1+grm2u1) gooroom-2.0; urgency=medium
+
+  * Supported linux-image-$KERNELVERSION-unsigned-$arch
+
+ -- jongkyung.woo <jkwoo@gooroom.kr>  Thu, 14 Nov 2019 10:19:44 +0900
+
 linux-latest (105+deb10u1) buster; urgency=medium
 
   * Update to 4.19.0-6
