--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u1) buster; urgency=medium
+
+  * Update to 4.19.0-6
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Aug 2019 02:16:02 +0100
+
 linux-latest (105) unstable; urgency=medium
 
   * Update to 4.19.0-5
