--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (80+deb9u9) stretch; urgency=medium
+
+  * Update to 4.9.0-11
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Aug 2019 02:22:14 +0100
+
 linux-latest (80+deb9u8) stretch; urgency=medium
 
   * Update to 4.9.0-10
