--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u2) UNRELEASED; urgency=medium
+
+  * Update to 4.19.0-7
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 29 Dec 2019 22:33:10 +0100
+
 linux-latest (105+deb10u1) buster; urgency=medium
 
   * Update to 4.19.0-6
