--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (105+deb10u2) UNRELEASED; urgency=medium
+linux-latest (105+deb10u2) buster; urgency=medium
 
   * Update to 4.19.0-7
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 29 Dec 2019 22:33:10 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 29 Dec 2019 22:39:49 +0100
 
 linux-latest (105+deb10u1) buster; urgency=medium
 
