--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u3) UNRELEASED; urgency=medium
+
+  * Update to 4.19.0-8
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 30 Jan 2020 22:48:14 +0100
+
 linux-latest (105+deb10u2) buster; urgency=medium
 
   * Update to 4.19.0-7
