--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (105+deb10u4) UNRELEASED; urgency=medium
+linux-latest (105+deb10u4) buster; urgency=medium
 
   * Update to 4.19.0-9
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 28 Apr 2020 22:49:58 +0200
+ -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 29 Apr 2020 16:16:38 +0200
 
 linux-latest (105+deb10u3) buster; urgency=medium
 
