--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u5) UNRELEASED; urgency=medium
+
+  * Update to 4.19.0-10
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 09 Jul 2020 21:42:26 +0200
+
 linux-latest (105+deb10u4) buster; urgency=medium
 
   * Update to 4.19.0-9
