--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u6) UNRELEASED; urgency=medium
+
+  * Update to 4.19.0-11
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 18 Sep 2020 00:03:46 +0200
+
 linux-latest (105+deb10u5) buster; urgency=medium
 
   * Update to 4.19.0-10
