--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 linux-latest (80+deb9u12) UNRELEASED; urgency=medium
 
   * debian/control: Point Vcs URLs to Salsa
+  * Update to 4.9.0-14
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 04 Oct 2018 17:34:24 +0100
 
