--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-linux-latest (80+deb9u12) UNRELEASED; urgency=medium
+linux-latest (80+deb9u12) stretch-security; urgency=high
 
   * debian/control: Point Vcs URLs to Salsa
   * Update to 4.9.0-14
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 04 Oct 2018 17:34:24 +0100
+ -- Ben Hutchings <benh@debian.org>  Thu, 29 Oct 2020 19:42:59 +0000
 
 linux-latest (80+deb9u11) stretch; urgency=medium
 
