Prepare to release linux-latest (105+deb10u8).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-linux-latest (105+deb10u8) UNRELEASED; urgency=medium
+linux-latest (105+deb10u8) buster; urgency=medium
 
   * Update to 4.19.0-13
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Nov 2020 06:04:02 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Nov 2020 19:01:04 +0100
 
 linux-latest (105+deb10u7) buster-security; urgency=high
 
