--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+linux-latest (105+deb10u9) UNRELEASED; urgency=medium
+
+  * Update to 4.19.0-14
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 29 Jan 2021 23:26:59 +0100
+
 linux-latest (105+deb10u8) buster; urgency=medium
 
   * Update to 4.19.0-13
