Import Debian version 105+deb10u9
linux-latest (105+deb10u9) buster-security; urgency=high

  * Update to 4.19.0-14

linux-latest (105+deb10u8) buster; urgency=medium

  * Update to 4.19.0-13

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+linux-latest (105+deb10u9) buster-security; urgency=high
+
+  * Update to 4.19.0-14
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 30 Jan 2021 08:43:43 +0100
+
+linux-latest (105+deb10u8) buster; urgency=medium
+
+  * Update to 4.19.0-13
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Nov 2020 19:01:04 +0100
+
 linux-latest (105+deb10u7) buster-security; urgency=high
 
   * Update to 4.19.0-12
