--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+linux-latest (105+deb10u14) buster-security; urgency=high
+
+  * Update to 4.19.0-19
+  * linux-image: Add NEWS for unprivileged eBPF change
+
+ -- Ben Hutchings <benh@debian.org>  Mon, 07 Mar 2022 22:42:37 +0100
+
+linux-latest (105+deb10u13) buster; urgency=medium
+
+  * Update to 4.19.0-18
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 30 Sep 2021 22:34:05 +0200
+
 linux-latest (105+deb10u12) buster; urgency=medium
 
   * Update to 4.19.0-17
