--- a/debian/changelog
+++ b/debian/changelog
@@ -1,100 +1,268 @@
-linux-latest (80+deb9u16) stretch-security; urgency=high
+linux-latest (105+deb10u16) buster-security; urgency=medium
 
-  * Update to 4.9.0-18
+  * Update to 4.19.0-21
+
+ -- Ben Hutchings <benh@debian.org>  Thu, 30 Jun 2022 20:28:04 +0200
+
+linux-latest (105+deb10u15) buster; urgency=medium
+
+  * Update to 4.19.0-20
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 19 Mar 2022 07:54:21 +0100
+
+linux-latest (105+deb10u14) buster-security; urgency=high
+
+  * Update to 4.19.0-19
   * linux-image: Add NEWS for unprivileged eBPF change
 
- -- Ben Hutchings <benh@debian.org>  Mon, 07 Mar 2022 22:38:56 +0100
+ -- Ben Hutchings <benh@debian.org>  Mon, 07 Mar 2022 22:42:37 +0100
 
-linux-latest (80+deb9u15) stretch-security; urgency=medium
+linux-latest (105+deb10u13) buster; urgency=medium
 
-  * Update to 4.9.0-17
+  * Update to 4.19.0-18
 
- -- Ben Hutchings <benh@debian.org>  Wed, 15 Dec 2021 23:32:39 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 30 Sep 2021 22:34:05 +0200
 
-linux-latest (80+deb9u14) stretch-security; urgency=medium
+linux-latest (105+deb10u12) buster; urgency=medium
 
-  * Update to 4.9.0-16
+  * Update to 4.19.0-17
 
- -- Ben Hutchings <benh@debian.org>  Tue, 22 Jun 2021 00:13:06 +0200
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 12 Jun 2021 07:16:00 +0200
 
-linux-latest (80+deb9u13) stretch-security; urgency=medium
+linux-latest (105+deb10u11) buster; urgency=medium
 
-  * Update to 4.9.0-15
+  * Update to 4.19.0-16
 
- -- Ben Hutchings <benh@debian.org>  Mon, 08 Mar 2021 17:51:18 +0100
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 19 Mar 2021 22:38:58 +0100
 
-linux-latest (80+deb9u12) stretch-security; urgency=high
+linux-latest (105+deb10u10) buster; urgency=medium
 
+  * Update to 4.19.0-15
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 06 Mar 2021 08:37:46 +0100
+
+linux-latest (105+deb10u9) buster-security; urgency=high
+
+  * Update to 4.19.0-14
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 30 Jan 2021 08:43:43 +0100
+
+linux-latest (105+deb10u8) buster; urgency=medium
+
+  * Update to 4.19.0-13
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 27 Nov 2020 19:01:04 +0100
+
+linux-latest (105+deb10u7) buster-security; urgency=high
+
+  * Update to 4.19.0-12
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 18 Oct 2020 14:43:57 +0200
+
+linux-latest (105+deb10u6) buster; urgency=medium
+
+  * Update to 4.19.0-11
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 18 Sep 2020 20:48:30 +0200
+
+linux-latest (105+deb10u5) buster; urgency=medium
+
+  * Update to 4.19.0-10
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 09 Jul 2020 21:58:28 +0200
+
+linux-latest (105+deb10u4) buster; urgency=medium
+
+  * Update to 4.19.0-9
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 29 Apr 2020 16:16:38 +0200
+
+linux-latest (105+deb10u3) buster; urgency=medium
+
+  * Update to 4.19.0-8
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 31 Jan 2020 06:24:52 +0100
+
+linux-latest (105+deb10u2) buster; urgency=medium
+
+  * Update to 4.19.0-7
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 29 Dec 2019 22:39:49 +0100
+
+linux-latest (105+deb10u1) buster; urgency=medium
+
+  * Update to 4.19.0-6
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Aug 2019 02:16:02 +0100
+
+linux-latest (105) unstable; urgency=medium
+
+  * Update to 4.19.0-5
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 07 May 2019 16:33:50 +0100
+
+linux-latest (104) unstable; urgency=medium
+
+  * Update to 4.19.0-4
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Mar 2019 05:24:50 +0000
+
+linux-latest (103) unstable; urgency=medium
+
+  * Update to 4.19.0-3
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 11 Feb 2019 15:38:29 +0000
+
+linux-latest (102) unstable; urgency=medium
+
+  * Update to 4.19.0-2
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 24 Jan 2019 21:28:23 +0100
+
+linux-latest (101) unstable; urgency=medium
+
+  * Update to 4.19.0-1
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 18 Dec 2018 07:00:42 +0100
+
+linux-latest (100) unstable; urgency=medium
+
+  [ Romain Perier ]
+  * Update to 4.18.0-3
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 28 Nov 2018 21:10:10 +0100
+
+linux-latest (99) unstable; urgency=medium
+
+  * Update to 4.18.0-2
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 03 Oct 2018 05:21:39 +0100
+
+linux-latest (98) unstable; urgency=medium
+
+  * Update to 4.18.0-1
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 06 Sep 2018 19:58:35 +0100
+
+linux-latest (97) unstable; urgency=medium
+
+  * Update to 4.17.0-3
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 18 Aug 2018 06:37:52 +0200
+
+linux-latest (96) unstable; urgency=medium
+
+  [ Romain Perier ]
+  * Update to 4.17.0-2
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 14 Aug 2018 18:55:00 +0100
+
+linux-latest (95) unstable; urgency=medium
+
+  [ Romain Perier ]
+  * Update to 4.17.0-1
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 17 Jul 2018 01:07:23 +0100
+
+linux-latest (94) unstable; urgency=medium
+
+  [ Ben Hutchings ]
+  * Substitute source package name in lintian-overrides
+  * Change binary package names to include any source package name suffix
+  * Don't build redundant linux-doc, linux-source, linux-tools packages
+
+  [ Salvatore Bonaccorso ]
+  * Update to 4.16.0-2
+
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 29 May 2018 15:14:04 +0200
+
+linux-latest (93) unstable; urgency=medium
+
+  * Update to 4.16.0-1
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 29 Apr 2018 22:40:57 +0100
+
+linux-latest (92) unstable; urgency=medium
+
+  * Update to 4.15.0-3
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Apr 2018 22:32:36 +0100
+
+linux-latest (91) unstable; urgency=medium
+
+  [ Ben Hutchings ]
   * debian/control: Point Vcs URLs to Salsa
-  * Update to 4.9.0-14
 
- -- Ben Hutchings <benh@debian.org>  Thu, 29 Oct 2020 19:42:59 +0000
+  [ Salvatore Bonaccorso ]
+  * Update to 4.15.0-2
 
-linux-latest (80+deb9u11) stretch; urgency=medium
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 24 Mar 2018 21:38:00 +0100
 
-  * Update to 4.9.0-13
+linux-latest (90) unstable; urgency=medium
 
- -- Ben Hutchings <benh@debian.org>  Mon, 06 Jul 2020 01:06:18 +0100
+  * Update to 4.15.0-1
 
-linux-latest (80+deb9u10) stretch; urgency=medium
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 20 Feb 2018 21:56:32 +0100
 
-  * Update to 4.9.0-12
+linux-latest (89) unstable; urgency=medium
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 28 Jan 2020 06:45:30 +0100
+  * Update to 4.14.0-3
 
-linux-latest (80+deb9u9) stretch; urgency=medium
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sat, 06 Jan 2018 00:20:59 +0100
 
-  * Update to 4.9.0-11
+linux-latest (88) unstable; urgency=medium
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 26 Aug 2019 02:22:14 +0100
+  * Update to 4.14.0-2
 
-linux-latest (80+deb9u8) stretch; urgency=medium
+ -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 24 Dec 2017 14:46:38 +0100
 
-  * Update to 4.9.0-10
+linux-latest (87) unstable; urgency=medium
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 19 Jul 2019 21:23:23 +0200
+  * linux-image: Add back-dated NEWS for vsyscall change in Linux 4.10
+  * linux-doc: Add symlinks to current documentation
+  * Update to 4.14.0-1
+  * linux-image: Add back-dated NEWS about AppArmor introduction
 
-linux-latest (80+deb9u7) stretch; urgency=medium
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 30 Nov 2017 20:15:20 +0000
 
-  * Update to 4.9.0-9
+linux-latest (86) unstable; urgency=medium
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 29 Mar 2019 14:41:18 +0100
+  * Add myself to Uploaders
+  * Update to 4.13.0-1
 
-linux-latest (80+deb9u6) stretch-security; urgency=high
+ -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 03 Oct 2017 07:02:40 +0200
 
-  * Update to 4.9.0-8
+linux-latest (85) unstable; urgency=medium
 
- -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 19 Aug 2018 20:28:09 +0200
+  * debian/control: Remove Frederik Schüler from Uploaders field
+  * Update to 4.12.0-2
 
-linux-latest (80+deb9u5) stretch; urgency=medium
+ -- Ben Hutchings <ben@decadent.org.uk>  Tue, 19 Sep 2017 01:06:11 +0100
 
-  * Update to 4.9.0-7
+linux-latest (84) unstable; urgency=medium
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 14 Jun 2018 15:07:03 +0100
+  * Update to 4.12.0-1 (Closes: #872055)
 
-linux-latest (80+deb9u4) stretch-security; urgency=high
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 13 Aug 2017 23:16:51 +0100
 
-  * Update to 4.9.0-6
+linux-latest (83) unstable; urgency=medium
 
- -- Yves-Alexis Perez <corsac@debian.org>  Thu, 22 Feb 2018 08:32:44 +0100
+  * Update to 4.11.0-2
 
-linux-latest (80+deb9u3) stretch-security; urgency=high
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 17 Jul 2017 22:26:00 +0100
 
-  * Update to 4.9.0-5
-
- -- Salvatore Bonaccorso <carnil@debian.org>  Thu, 04 Jan 2018 12:57:17 +0100
-
-linux-latest (80+deb9u2) stretch; urgency=medium
-
-  * Update to 4.9.0-4
-
- -- Ben Hutchings <ben@decadent.org.uk>  Tue, 19 Sep 2017 14:51:35 +0100
-
-linux-latest (80+deb9u1) stretch; urgency=medium
+linux-latest (82) unstable; urgency=medium
 
   * Revert changes to debug symbol meta-packages (Closes: #866691)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 01 Jul 2017 01:31:49 +0100
+
+linux-latest (81) unstable; urgency=medium
+
+  * Update to 4.11.0-1
+  * Stop generating various transitional packages needed in stretch
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Fri, 30 Jun 2017 23:50:03 +0100
 
 linux-latest (80) unstable; urgency=medium
 
