--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+linux-latest (105+deb10u20) buster-security; urgency=medium
+
+  * Update to 4.19.0-25
+
+ -- Ben Hutchings <benh@debian.org>  Tue, 25 Jul 2023 20:16:23 +0200
+
+linux-latest (105+deb10u19) buster-security; urgency=medium
+
+  * Update to 4.19.0-24
+
+ -- Ben Hutchings <benh@debian.org>  Wed, 03 May 2023 00:36:44 +0200
+
 linux-latest (105+deb10u18) buster-security; urgency=medium
 
   * Update to 4.19.0-23
